[package]
name = "worker-rust"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
jwt-simple = "0.12"
libsql-client = { version = "0.33.4", default-features = false, features = ["workers_backend"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde"] }
worker = "0.0.18"

[profile.release]
lto = true
strip = true
codegen-units = 1
