[workspace]
members = [
  "turso-edge-cache",
  "turso-edge",
  "kv-cache",
  "auth",
  "turso-aws-lambda",
]
exclude = ["shuttle-turso-local-replica"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0/MIT"
readme = "./README.md"

[workspace.dependencies]
jwt-compact = "0.8.0"
libsql-client = { version = "0.33.4", default-features = false, features = [
  "workers_backend",
  "mapping_names_to_values_in_rows",
] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.114"
url = "2.5.0"
uuid = { version = "1.7.0", features = ["serde"] }

[profile.release]
lto = true
strip = true
codegen-units = 1

