[package]
name = "kv-cache"
version = "0.1.0"
edition = "2021"
categories = ["wasm"]
license = "Apache-2.0/MIT"
readme = "./README.md"


# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
worker = { workspace = true }
worker-kv = "0.6.0"
