[package]
name = "shuttle-turso-local-replica"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
shuttle-axum = "0.42.0"
shuttle-runtime = "0.42.0"
shuttle-turso = "0.42.1"
libsql = "0.3.2"
tokio = "1.37.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
